--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@gopowerteam/http-request-cli",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "dist/index.js",
   "files": [
     "dist",
+    "vite.plugin",
     "README.md"
   ],
   "keywords": [
@@ -38,7 +39,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "vite": "^2.5.0"
   },
   "repository": {
     "type": "git",
