--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "typescript": "^4.2.4",
     "vite": "^2.5.0"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gopowerteam/package.http-request.git"
